[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant-mlx"
version = "0.1.0"
description = "TurboQuant 3-bit KV cache compression for MLX on Apple Silicon"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Blake McClellan" }]
keywords = ["mlx", "quantization", "kv-cache", "apple-silicon", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.18.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "psutil>=5.9",
    "mlx-lm>=0.18.0",
]

[tool.setuptools.packages.find]
include = ["turboquant_mlx*"]
